Fix T89941: No path`s bevel update, when I change bevel profile curve

Update was skipping the batch cache.